# healthquery

./: .env.example  .gitignore  README.md  docker-compose.example.yml
backend/: Dockerfile  app_settings.py  auth.py  main.py  mcp_server.py  requirements.txt
backend/db/: __init__.py  database.py  schema_migrations.py
backend/db/migrations/: 001_initial.sql  002_metric_points.sql  003_nullable_daily_summaries.sql
backend/routers/: __init__.py  health.py  read_api.py  reports.py  webhook.py
backend/scripts/: replay_ingest_batches.py
backend/services/: __init__.py  config_store.py  health_views.py  ingest.py  operational_settings.py  reporting.py  seed_data.py  sql_guard.py
backend/tests/: conftest.py  test_health.py  test_mcp_server.py
backend/tests/fixtures/: health_webhook_sample.json
backend/utils/: __init__.py  exceptions.py  logger.py  sse.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/public/: site.webmanifest
frontend/src/: App.tsx  index.css
frontend/src/fixtures/: healthquery_sample.json
frontend/src/test/: example.test.tsx
health_coach/: pyproject.toml
health_coach/health_coach/: __init__.py  analyzer.py  generate_weekly_summary.py  report.py  vocabulary.py
health_coach/tests/: test_analyzer.py  test_report.py
health_coach_anomaly/: README.md  pyproject.toml
health_coach_anomaly/health_coach_anomaly/: __init__.py  context.py  detector.py  output.py  rules.py  thresholds.py  windows.py
health_coach_anomaly/tests/: conftest.py  test_context.py  test_detector.py  test_rules.py  test_windows.py
healthquery_client/: README.md  __init__.py  client.py  exceptions.py  models.py  pyproject.toml
healthquery_client/tests/: conftest.py  test_client.py  test_models.py
