[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "health-coach-anomaly"
version = "0.1.0"
description = "Anomaly detector for the Health Coach (STA-5 build #5): applies AGENTS.md thresholds to HealthQuery metrics with a context window."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "HomeNetwork" }]
keywords = ["healthquery", "health", "wearables", "anomaly", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27,<1.0",
    "pydantic>=2.6,<3.0",
    "healthquery-client>=0.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["health_coach_anomaly*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
